<resources>
    <string name="safecenter">乐安全</string>
    <string name="charge_safe">吸费克星</string>
    <string name="charge_safe_summery">防止流量吸费、短信吸费和电话吸费</string>
    <string name="permission_control">隐私保护</string>
    <string name="permission_control_summery">防止隐私信息被偷窥和收集</string>
    <string name="black_list">骚扰拦截</string>
    <string name="black_list_summery">智能拦截骚扰电话和垃圾短信</string>
    <string name="anti_virus">病毒查杀</string>
    <string name="anti_virus_summery">查杀手机恶意软件</string>
    <string name="anti_theft">手机防盗</string>
    <string name="anti_theft_summery">远程数据备份,销毁,锁定,报警和定位</string>
    <string name="privacy_safe">私密空间</string>
    <string name="privacy_safe_summery">设置您的手机私密空间</string>
    <string name="privacy_modes">私密模式</string>
    <string name="privacy_modes_summery">设置儿童模式、访客模式</string>
    <string name="safe_log">安全日志</string>
    <string name="safe_log_summery">记录安全事件</string>
    <string name="trust_apps">信任应用</string>
    <string name="trust_apps_summery">不被乐安全检测的应用软件</string>
    <string name="against_peep_log">防偷窥日志</string>
    <string name="charge_safe_log">防吸费日志</string>
    <string name="against_harass_log">骚扰拦截日志</string>
    <string name="against_peep_log_summary">进入查看隐私日志</string>
    <string name="charge_safe_log_summary">进入查看资费日志</string>
    <string name="smallTools">小工具</string>
    <string name="nullStr" />
    <string name="about">关 于</string>
    <string name="about1">安全-----保护您的隐私和资费安全\10\10版 本：乐安全3.0；适用于乐Phone\10开发者：联想（中国）研究院\10\10简 介：</string>
    <string name="about2">安全是联想研究院开发的一款系统级内核防御，集防偷窥、防吸费、防骚扰、手机防盗、防病毒等功能于一身的智能手机安全软件，为您的移动互联网生活带来贴心的呵护！</string>
    <string name="about3">主要功能介绍：</string>
    <string name="about4">、 防吸费\10防吸费功能包括防流量吸费，防短信吸费和防电话吸费。\10 (1) 防流量吸费：利用流量防火墙来限制特定应用使用移动数据网络上网，尤其针对那些大流量的应用和后台偷偷上网的应用，以保护用户的流量不超标，避免产生大量流量费用。\10 (2) 防短信吸费：拦截所有应用的后台发送短信行为，让您彻底远离短信吸费的风险。\10 (3) 防电话吸费：拦截所有应用的后台拨打电话行为，让您彻底远离电话吸费的风险。\10\10 2、 防偷窥\10防偷窥功能可阻止各种可疑应用偷窥和收集用户的联系人，短信，日程，浏览器历史记录和位置等隐私信息，更可阻止恶意应用在后台进行录音，摄像以及监控用户电话等恶意行为，让用户彻底远离类似于X-卧底等已知和未知的各类木马软件的窃听和偷窥风险。\10\10 3、 防骚扰\10防骚扰功能可智能拦截骚扰电话和垃圾短信，支持用户举报黑名单电话和短信号码。用户可更新网络黑名单和智能短信过滤规则库，已达到最好的骚扰拦截效果。\10\10 4、 防病毒（mini-lephone无此功能）\10多引擎智能查杀各种手机病毒和木马，实时保护您的手机安全。\10\10 5、 手机防盗\10手机防盗功能保护您的手机在丢失后将损失降低到最低程度。通过发送特定短信，远程控制您丢失的手机：包括销毁隐私信息(联系人、通话记录、短信息、日程、浏览器历史记录、邮件、PUSH帐号)，备份联系人和短信息，锁定手机，发报警音，以及定位追踪找回。\10\10 6、 私人模式\10在正常模式下，私密联系人及其通讯信息会被隐藏，当您临时离开手机时，保护您的私密通讯信息不会被他人看见。只有在正确输入安全中心密码进入私人模式后，才可见到您的私密联系人，私密通话记录和私密短信等通讯信息。私人模式在锁屏后会自动退出到正常模式。\10\10 7、 儿童模式\10儿童模式开启后，可自动启用离线模式和禁用特定应用。\10 (1) 自动启用离线模式: 防手机辐射，防止儿童误打电话，造成资费和骚扰他人的现象\10 (2) 应用禁用:屏蔽特定应用（在桌面消失），防止手机上的数据被儿童误操作破坏；禁止儿童使用不适合孩子的应用。\10\10 8、 访客模式（mini-lephone无此功能）\10访客模式是被他人临时使用时，开启该模式可自动隐藏您的所有通讯信息和特定应用，以保护您的隐私和数据安全。\10\10 9、 安全日志\10安全日志是记录防吸费，防偷窥，防骚扰等功能产生的安全事件，您还可对这些安全事件进行举报，以更好的提升联想对用户的安全服务。</string>
    <string name="privacy_mode">私人模式</string>
    <string name="privacy_mode_disable">查看私密通讯信息</string>
    <string name="privacy_mode_enable">已开启，锁屏后自动退到正常模式</string>
    <string name="privacy_mode_set">添加私密联系人</string>
    <string name="child_mode">儿童模式</string>
    <string name="child_mode_set">开启/关闭离线模式、设置要禁用的应用</string>
    <string name="guest_mode">访客模式</string>
    <string name="guest_mode_set">访客模式设置</string>
    <string name="guest_mode_summary">设置儿童模式、访客模式</string>
    <string name="guest_mode_enable">所有通讯信息和指定应用已被隐藏</string>
    <string name="guest_mode_disable">隐藏所有通讯信息和指定应用</string>
    <string name="plan_mode">开启离线模式</string>
    <string name="hide_app">应用禁用（最多禁用10个应用）</string>
    <string name="child_mode_function">选择在使用儿童模式时启用哪些功能</string>
    <string name="plan_mode_closed">儿童使用时开启离线模式</string>
    <string name="hide_app_closed">儿童使用时开启应用禁用功能</string>
    <string name="hide_app_summary">请选择儿童模式下要禁用的应用</string>
    <string name="open_child_mode">进入儿童模式</string>
    <string name="open_child_mode_tips">进入儿童模式之前是否退出乐安全？</string>
    <string name="switch_to_child_mode">已切换至儿童模式</string>
    <string name="switch_to_privacy_mode">已切换至私人模式</string>
    <string name="to_privacy_mode_set">私人模式已开启，可查看私密通讯录和短信</string>
    <string name="switch_to_guest_mode">已切换至访客模式</string>
    <string name="against_theft">手机防盗</string>
    <string name="theft">手机防盗</string>
    <string name="theft_summary">远程数据备份、销毁、锁定手机、报警和定位</string>
    <string name="stop_against_theft">手机防盗已禁用</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="opend">已开启</string>
    <string name="closed">已关闭</string>
    <string name="select_all">全选</string>
    <string name="on_all">全部允许</string>
    <string name="off_all">全部禁止</string>
    <string name="display_all">全部显示</string>
    <string name="hide_all">全部隐藏</string>
    <string name="info_all">全部提示</string>
    <string name="set">设置</string>
    <string name="help">帮助</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="change">修改</string>
    <string name="modify_black">修改黑名单</string>
    <string name="nodate">没有非系统应用申请该权限</string>
    <string name="pwdset">设置乐安全密码</string>
    <string name="pwdmodify">修改乐安全密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="confirm_password">再次确认密码</string>
    <string name="confirm_new_password">再次确认新密码</string>
    <string name="pwdset_rule">请输入密码(6位数字)</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_privacy_pwd">请输入6位乐安全密码</string>
    <string name="pwd_error">密码错误</string>
    <string name="pwd_error_tips">密码错误,请重新输入</string>
    <string name="error_tips_null">输入密码为空,请重新输入</string>
    <string name="error_tips_format">输入格式有误！</string>
    <string name="error_tips_different">两次输入不一样！</string>
    <string name="set_success">密码设置成功，请牢记密码！如遗忘可在设置中向安全手机号发送一条短信取回。</string>
    <string name="change_success">密码修改成功！</string>
    <string name="reading">读取中... ...</string>
    <string name="wait">请稍候</string>
    <string name="read">读取</string>
    <string name="use">使用</string>
    <string name="function">功能</string>
    <string name="limit">限制应用</string>
    <string name="app_can">下列应用可</string>
    <string name="to_manage1">，请禁用您不信任的应用，以确保隐私安全</string>
    <string name="to_manage2">，请您管理以确保资费安全</string>
    <string name="to_manage3">提示：某些应用被禁用后,可能会导致异常退出。</string>
    <string name="contact">联系人和通话记录</string>
    <string name="get_contact">获取联系人和通话记录信息</string>
    <string name="sms">短信</string>
    <string name="get_sms">获取短信息</string>
    <string name="calender">日程</string>
    <string name="get_calender">获取日程信息</string>
    <string name="history">浏览器历史记录和书签</string>
    <string name="get_history">获取浏览器历史记录和书签信息</string>
    <string name="location">我的位置</string>
    <string name="get_location">获取位置信息</string>
    <string name="record">录音设备</string>
    <string name="run_record">进行后台录音</string>
    <string name="camera">摄像头设备</string>
    <string name="run_camera">进行后台录像监控</string>
    <string name="call">监控电话</string>
    <string name="run_call">进行后台电话监控</string>
    <string name="clean_history">清除浏览器历史记录</string>
    <string name="open_theft">开启手机防盗功能</string>
    <string name="open_chargesafe">开启资费安全功能</string>
    <string name="open_permcontrol">开启防偷窥功能</string>
    <string name="intercept_msg">后台短信拦截</string>
    <string name="sms_background">防短信吸费</string>
    <string name="to_sms_back">在后台发送短信</string>
    <string name="call_background">防电话吸费</string>
    <string name="to_call_back">在后台拨打电话</string>
    <string name="internet_backbround">防流量吸费</string>
    <string name="to_internet_back">使用数据网络上网</string>
    <string name="privacy_set_explain">私人模式下，可以在联系人中添加/解除私密联系人。\10私密联系人以及私密联系人的通话记录和短信在正常模式下都会隐藏，只有当进入私人模式时才可看到。</string>
    <string name="add_privacy_contact">管理私密联系人</string>
    <string name="input_safe_phone_number">请输入安全手机号</string>
    <string name="send_to_phone_number">设置陌生SIM卡插入提醒所发至的手机号</string>
    <string name="set_distant_command">手机防盗指令使用方法和指令</string>
    <string name="distant_command">手机防盗远程指令</string>
    <string name="send_command">送远程指令至丢失手机，执行以下操作，以减少您的损失。\10注：如SIM/UIM卡被更换，请发送到新的手机号，操作码不区分大小写。</string>
    <string name="send_content">发送内容：</string>
    <string name="command">乐安全密码#操作代码</string>
    <string name="example">如：您的乐安全密码是123456，发送短信\10123456#XH到丢失手机会销毁隐私数据(包括联系人、通话记录、短信息、日程、浏览器历史记录、邮件、PUSH帐号)。</string>
    <string name="bakup">数据备份</string>
    <string name="destroy">数据销毁</string>
    <string name="locked">锁定手机</string>
    <string name="alarm">发报警音</string>
    <string name="locate">定位追踪</string>
    <string name="all">执行所有</string>
    <string name="bakup_">密码#BF</string>
    <string name="destroy_">密码#XH</string>
    <string name="locked_">密码#SD</string>
    <string name="alarm_">密码#BJ</string>
    <string name="locate_">密码#DW</string>
    <string name="all_">密码#ALL</string>
    <string name="code">操作代码：</string>
    <string name="insert_sim">请先插入SIM卡或关闭离线模式！</string>
    <string name="safe_phone_number_set">安全手机设置</string>
    <string name="safe_phone_set_number">设置安全手机:</string>
    <string name="safe_phone_number">安全手机</string>
    <string name="safe_phone_number_save_no">尚未设置安全手机</string>
    <string name="againsttheft_Prompt">防盗指令说明</string>
    <string name="sim_alarm_set">陌生SIM卡插入设置</string>
    <string name="sim_alarm_sms">短信提醒</string>
    <string name="sim_alarm_sms_msg">陌生SIM卡插入时向安全手机发送提示短信</string>
    <string name="delete">删除</string>
    <string name="harass_phone">骚扰电话</string>
    <string name="nologdate">没有拦截记录</string>
    <string name="all_select">全选</string>
    <string name="cancel_select">取消选择</string>
    <string name="localblack_becall">来电</string>
    <string name="menu_recover">清空骚扰电话</string>
    <string name="antispamlocalblack_add">添加</string>
    <string name="antispamlocalblack_back">返回</string>
    <string name="antispamhand_number">号码</string>
    <string name="antispamhand_name">备注</string>
    <string name="antispamhand_name_hit">可以为空</string>
    <string name="antivirusinfo1">恭喜找到彩蛋:-)</string>
    <string name="antivirusinfo2">乐安全，一直为你守护</string>
    <string name="antivirusinfo3">轻量节能，内核防御\10恶意行为，一网打尽</string>
    <string name="antivirusinfo4">主创人员：\10刘永锋，董春燕，阮景春，张成，李甘，杨大鹏，吴凤龙，刘畅，刘雪，殷川川，于海航，王莉</string>
    <string name="antivirusinfo5">找到彩蛋，找回被盗手机最佳方法:-)\10 一个女孩这样做，给自己手机发短信：我回老家了，欠你的1万元钱放在XX处，下午都可以过来，结果那小贼被生擒了。</string>
    <string name="set_number">设置运营商流量查询号码</string>
    <string name="set_traffic_code">设置运营商流量查询代码</string>
    <string name="set_traffic_number_hint">如:中国移动为10086</string>
    <string name="set_traffic_code_hint">如:中国移动为CXGLL</string>
    <string name="harss_set">拦截方式</string>
    <string name="signtype1">推销</string>
    <string name="signtype2">房产中介</string>
    <string name="signtype3">诈骗</string>
    <string name="signtype4">保险</string>
    <string name="signtype5">理财投资</string>
    <string name="signtype6">售后</string>
    <string name="sign">乐安全提醒您</string>
    <string name="addtoblack">加入黑名单</string>
    <string name="useful_phone">常用电话</string>
    <string name="traffic_monitor">流量监控</string>
    <string name="notification_string_allow">允许</string>
    <string name="notification_string_forbid">禁止</string>
    <string name="notification_string_uninstall">卸载</string>
    <string name="add_telnumber">如是座机,请添加区号</string>
    <string name="sub_title_switcher">快捷开关</string>
    <string name="switcher_wifi">WLAN</string>
    <string name="switcher_mobile_data">数据上网</string>
    <string name="switcher_light">屏幕亮度</string>
    <string name="switcher_ringtone">铃声</string>
    <string name="switcher_vibrate">振动</string>
    <string name="switcher_rotation">屏幕旋转</string>
    <string name="switcher_children_desktop">儿童桌面</string>
    <string name="switcher_bluetooth">蓝牙</string>
    <string name="switcher_timeout">屏幕超时</string>
    <string name="switcher_visitor_mode">访客模式</string>
    <string name="switcher_airplane_mode">飞行模式</string>
    <string name="switcher_hint_default">点击外侧区域关闭窗口</string>
</resources>