<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:switcher="http://schemas.android.com/apk/res/com.lenovo.safecenter" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:textColor="@color/text_switcher_title" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:layout_marginBottom="2dp" android:text="@string/sub_title_switcher"/>
        <include layout="@layout/assist_divider_horizontal_title"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_wifi" android:paddingTop="1dp" android:paddingBottom="1dp" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_wifi" switcher:switcher_label="@string/switcher_wifi"/>
            <include layout="@layout/assist_divider_vertical_top"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_mobile_data" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_mobile_data" switcher:switcher_label="@string/switcher_mobile_data"/>
            <include layout="@layout/assist_divider_vertical_top"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_ringtone" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_ringtone" switcher:switcher_label="@string/switcher_ringtone"/>
            <include layout="@layout/assist_divider_vertical_top"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_vibrate" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_vibrate" switcher:switcher_label="@string/switcher_vibrate"/>
        </LinearLayout>
        <include layout="@layout/assist_divider_horizontal"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_light" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_switcher_light_auto" switcher:switcher_label="@string/switcher_light"/>
            <include layout="@layout/assist_divider_vertical_middle"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_rotation" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_rotation" switcher:switcher_label="@string/switcher_rotation"/>
            <include layout="@layout/assist_divider_vertical_middle"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_timeout" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_switcher_timeout_30s" switcher:switcher_label="@string/switcher_timeout"/>
            <include layout="@layout/assist_divider_vertical_middle"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_bluetooth" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_bluetooth" switcher:switcher_label="@string/switcher_bluetooth"/>
        </LinearLayout>
        <include layout="@layout/assist_divider_horizontal"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp">
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_traffic_monitor" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_traffic_monitor" switcher:switcher_label="@string/traffic_monitor"/>
            <include layout="@layout/assist_divider_vertical_bottom"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_children_desktop" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_children_desktop" switcher:switcher_label="@string/switcher_children_desktop"/>
            <include layout="@layout/assist_divider_vertical_bottom"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_guest_mode" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_visitor_mode" switcher:switcher_label="@string/switcher_visitor_mode"/>
            <include layout="@layout/assist_divider_vertical_bottom"/>
            <com.lenovo.safecenter.floatwindow.view.SwitcherItemView android:id="@+id/switch_airplane_mode" android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" switcher:switcher_icon="@drawable/assist_selector_switcher_airplane_mode" switcher:switcher_label="@string/switcher_airplane_mode"/>
        </LinearLayout>
        <include layout="@layout/assist_divider_horizontal"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="39dp">
            <TextView android:textSize="14sp" android:textColor="@color/text_switcher_hint_off" android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@+id/msg_hint" android:duplicateParentState="true" android:layout_width="220dp" android:layout_height="26dp" android:layout_marginTop="3dp" android:layout_marginBottom="2dp" android:text="@string/switcher_hint_default"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
