<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/antivirusback" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="23dp" android:textColor="#ff198fff" android:gravity="center_horizontal" android:id="@+id/antivirustxt_info2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/antivirusinfo2"/>
    <LinearLayout android:id="@+id/antivirusanim_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/antivirustxt_info2"/>
    <TextView android:textSize="25dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/antivirustxt_info1" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/antivirusinfo1"/>
    <TextView android:textSize="13dp" android:textColor="#ffffffff" android:id="@+id/antivirustxt_info5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/antivirusinfo5" android:layout_alignParentBottom="true"/>
    <TextView android:textSize="15dp" android:textColor="#ffffffff" android:id="@+id/antivirustxt_info4" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="10dp" android:text="@string/antivirusinfo4" android:layout_above="@+id/antivirustxt_info5"/>
    <TextView android:textSize="20dp" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@+id/antivirustxt_info3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/antivirusinfo3" android:layout_above="@+id/antivirustxt_info4"/>
</RelativeLayout>
