<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/notification_slide_left" android:text="@string/notification_string_forbid" android:drawableLeft="@drawable/perm_deny" style="@style/silde_panel_btn_noti"/>
    <Button android:id="@+id/notification_slide_center" android:text="@string/notification_string_allow" android:drawableLeft="@drawable/perm_grant" style="@style/silde_panel_btn_noti"/>
    <Button android:id="@+id/notification_slide_right" android:text="@string/notification_string_uninstall" android:drawableLeft="@drawable/perm_uninstall" style="@style/silde_panel_btn_noti"/>
</LinearLayout>
