<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <RelativeLayout android:background="@drawable/title_bg" android:layout_width="match_parent" android:layout_height="35dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <ImageView android:id="@+id/sign_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="2dp" android:layout_marginRight="10dp" android:layout_marginBottom="2dp" android:layout_toLeftOf="@+id/sign_title" android:layout_centerVertical="true"/>
        <TextView android:textSize="20dp" android:textColor="#ffffffff" android:id="@+id/sign_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="@style/DialogText.Title"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/content" android:background="#ffeeeeee" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <TextView android:textSize="16dp" android:id="@+id/message" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/charge_safe_summery" style="@style/DialogText"/>
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:background="@drawable/dialog_bg_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
            <TextView android:textSize="18dp" android:gravity="center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/harass_phone" style="@style/DialogText"/>
            <TextView android:textSize="20dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/sign_txt1" android:background="@drawable/signtype_normal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/signtype1" style="@style/DialogText"/>
            <TextView android:textSize="20dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/sign_txt2" android:background="@drawable/signtype_normal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/signtype2" style="@style/DialogText"/>
            <TextView android:textSize="20dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/sign_txt3" android:background="@drawable/signtype_normal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/signtype3" style="@style/DialogText"/>
            <CheckBox android:textSize="14dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/signblack_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/addtoblack" style="@style/DialogText"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_weight="1">
            <TextView android:textSize="18dp" android:gravity="center" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/useful_phone" style="@style/DialogText"/>
            <TextView android:textSize="22dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/sign_txt4" android:background="@drawable/signtype_normal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/signtype4" style="@style/DialogText"/>
            <TextView android:textSize="22dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/sign_txt5" android:background="@drawable/signtype_normal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/signtype5" style="@style/DialogText"/>
            <TextView android:textSize="22dp" android:textColor="#ffffffff" android:gravity="center" android:id="@+id/sign_txt6" android:background="@drawable/signtype_normal" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:text="@string/signtype6" style="@style/DialogText"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/button" android:background="@drawable/dialog_bg_bottom" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
        <TextView android:textSize="16dp" android:textColor="@color/black1" android:gravity="center" android:id="@+id/positiveButton" android:background="@drawable/signbtn_bg" android:layout_width="0dp" android:layout_height="45dp" android:layout_marginLeft="10dp" android:layout_marginBottom="6dp" android:text="@string/sign" android:layout_weight="1"/>
        <TextView android:textSize="16dp" android:textColor="@color/black1" android:gravity="center" android:id="@+id/negativeButton" android:background="@drawable/signbtn_bg" android:layout_width="0dp" android:layout_height="45dp" android:layout_marginLeft="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="6dp" android:text="@string/cancel" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
